<resources>
    <string name="app_name">Catch the Gauntlet</string>
    <string name="todo">TODO</string>
    <string name="score_0">Score : 0</string>
    <string name="time_15">Time : 15</string>
    <string name="textview">TextView</string>
    <string name="can_you_catch_the_gauntlet_before_the_time_runs_out">Can you catch the Gauntlet before the time runs
        out?
    </string>

    <string name="new_game">New Game</string>

    <string name="instructions">Instructions</string>
    <string name="infinity_gauntlets_will_appear_on_your_screen_before_quickly_disappearing_click_on_the_gauntlet_to_increase_your_score_before_the_time_runs_out">
        Infinity gauntlets will appear on your screen before quickly disappearing. Click on the gauntlet to increase
        your score before the time runs out.
    </string>
    <string name="help_the_avengers_to_beat_thanos">Help the Avengers to beat Thanos!</string>



</resources>
