<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instructions">

    <TextView
            android:text="@string/infinity_gauntlets_will_appear_on_your_screen_before_quickly_disappearing_click_on_the_gauntlet_to_increase_your_score_before_the_time_runs_out"
            android:layout_width="320dp"
            android:layout_height="183dp"
            android:id="@+id/textView3" android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.56"/>
    <TextView
            android:text="@string/help_the_avengers_to_beat_thanos"
            android:layout_width="310dp"
            android:layout_height="82dp"
            android:id="@+id/textView4" android:textSize="20sp"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="270dp" app:srcCompat="@drawable/instructions"
            android:id="@+id/imageView10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/todo"/>
    <ImageView
            android:layout_width="79dp"
            android:layout_height="125dp" app:srcCompat="@drawable/infinity_gauntlet"
            android:id="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/todo"/>
</android.support.constraint.ConstraintLayout>