<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ActStart" android:textAlignment="gravity">
    <TextView
            android:text="@string/can_you_catch_the_gauntlet_before_the_time_runs_out"
            android:layout_width="390dp"
            android:layout_height="55dp"
            android:id="@+id/textView2"
            android:gravity="center" android:textSize="18sp"
            android:textStyle="bold" android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView13"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/newGame"
            app:layout_constraintVertical_bias="0.175"/>
    <ImageView
            android:layout_width="41dp"
            android:layout_height="59dp" app:srcCompat="@drawable/infinity_gauntlet"
            android:id="@+id/newGame"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:layout_marginStart="120dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="208dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="41dp"
            android:layout_height="59dp" app:srcCompat="@drawable/infinity_gauntlet"
            android:id="@+id/instructImg"
            android:clickable="true" android:longClickable="true"
            android:contentDescription="@string/todo"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/newGame" app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/newGame"/>
    <Button
            android:text="@string/new_game"
            android:layout_width="155dp"
            android:layout_height="59dp"
            android:id="@+id/butn" android:onClick="newGameStart"
            app:layout_constraintStart_toEndOf="@+id/newGame"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/newGame" android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/instructions"
            android:layout_width="155dp"
            android:layout_height="59dp"
            android:id="@+id/button2"
            android:onClick="instructions"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/butn" app:layout_constraintStart_toEndOf="@+id/instructImg"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="407dp"
            android:layout_height="280dp" app:srcCompat="@drawable/abc"
            android:id="@+id/imageView13"
            android:contentDescription="@string/todo"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>