<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/time_15"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:id="@+id/txtTime" android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="30sp" android:textAlignment="gravity" android:gravity="center"/>
    <TextView
            android:text="@string/score_0"
            android:layout_width="174dp"
            android:layout_height="42dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txtScore" app:layout_constraintHorizontal_bias="0.502" android:textSize="30sp"
            android:gravity="center" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"/>
    <android.support.v7.widget.GridLayout
            android:layout_width="395dp"
            android:layout_height="495dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/gridLayout"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="69dp"
            app:layout_constraintBottom_toTopOf="@+id/txtScore">

        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView" app:layout_column="0" app:layout_row="0"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>
        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView2" app:layout_column="1" app:layout_row="0"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>
        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView3" app:layout_column="2" app:layout_row="0"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>
        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView4" app:layout_column="0" app:layout_row="1"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>
        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView5" app:layout_column="1" app:layout_row="1"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>
        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView6" app:layout_column="2" app:layout_row="1"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>
        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView7" app:layout_column="0" app:layout_row="2"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>
        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView8" app:layout_column="1" app:layout_row="2"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>
        <ImageView
                android:layout_width="123dp"
                android:layout_height="172dp" app:srcCompat="@drawable/infinity_gauntlet"
                android:id="@+id/imageView9" app:layout_column="2" app:layout_row="2"
                android:contentDescription="@string/todo" android:contextClickable="false" android:clickable="false"
                android:longClickable="false" android:onClick="incScore"/>

    </android.support.v7.widget.GridLayout>
    <TextView
            android:text="@string/textview"
            android:layout_width="248dp"
            android:layout_height="41dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/txtHIghscore" tools:text=" " android:textSize="30sp"
            android:gravity="center" app:layout_constraintTop_toBottomOf="@+id/txtScore"
            android:layout_marginTop="5dp"/>
</android.support.constraint.ConstraintLayout>